--- a/Version 2.0/client.ui
+++ b/Version 2.0/client.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>天线计算工具 V1.0 By LiFZ</string>
+   <string>天线计算工具 V2.0 By LiFZ</string>
   </property>
   <widget class="QGroupBox" name="groupBox_1">
    <property name="geometry">
@@ -152,9 +152,9 @@
       </rect>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab_1">
       <attribute name="title">
        <string>r,R-&gt;Zo</string>
       </attribute>
@@ -176,7 +176,7 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="lineEdit_15"/>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_10">
@@ -348,7 +348,7 @@
      </widget>
     </widget>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>21</x>
